[package]
name = "allcontributions"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139" }
termcolor = "1.4.1"
thiserror = "2.0.11"
time = "0.3.37"
tokio = { version = "1.43.0", features = ["full"] }

